Final Result (From Yuhang Shang (ys3132))

--- a/Final_Step.ipynb
+++ b/Final_Step.ipynb
@@ -3986,11 +3986,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"prediction.csv\", Pred,fmt='%d',delimiter=',',header='predictions', comments='')"
+    "np.savetxt(\"prediction_onlyonecolumn.csv\", Pred,fmt='%d',delimiter=',',header='predictions', comments='')"
    ]
   },
   {
